# Deve-Joint

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  check.sh  docker-compose.dev.yml  makefile  pyproject.toml  templates  test_super.py
app/: entrypoint.sh  manage.py  reload.sh  test_db.sqlite3
app/DeveJoint/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
app/DeveJoint/projects/: models.py  urls.py
app/MainPageApp/: admin.py  apps.py  models.py  urls.py  views.py
app/MainPageApp/fixtures/: 001_programs.json
app/MainPageApp/migrations/: 0001_initial.py
app/MainPageApp/templates/MainPageApp/: about.html  contacts.html  index.html  job_details.html  job_listing.html  news_form.html  news_list.html
app/auth_app/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
app/authapp/: admin.py  forms.py  models.py  tests.py  utils.py  views.py
app/authapp/migrations/: 0001_initial.py
app/chat_app/: consumers.py  models.py  routing.py  views.py
app/config/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
app/cv_app/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
app/cv_app/templates/cv_app/: cv_confirm_delete.html  cv_create_form.html  cv_detail.html  cv_list.html  cv_update_form.html
app/favorite_app/: admin.py  models.py  urls.py  views.py
app/favorite_app/templates/favorite_app/: favorites.html
app/main_app/: admin.py  models.py  urls.py  views.py
app/main_app/templates/MainPageApp/: index.html  job_details.html  job_listing.html
app/main_app/templates/main_app/: about.html  contacts.html  index.html  news_confirm_delete.html  news_detail.html  news_form.html  news_list.html
app/main_app/templates/mainapp/: about.html  contacts.html  index.html  job_details.html  job_listing.html
app/mainapp/: apps.py  models.py  urls.py  views.py
app/project_app/: admin.py  apps.py  forms.py  models.py  permissions.py  rules.py  service.py  urls.py  views.py
app/project_app/templates/project_app/: create_project.html  my_projects.html  project_confirm_delete.html  project_delete.html  project_detail.html  project_form.html  (+4 more)
app/project_app/views/: __init__.py  member_views.py  mixins.py  project_views.py
app/projectapp/: admin.py  apps.py  models.py  service.py  urls.py  views.py
app/projects_app/: models.py  service.py
app/role_app/: admin.py  apps.py  models.py
app/roleapp/: admin.py  apps.py  models.py
app/roles_app/: admin.py  apps.py  models.py
app/static/css/: bootstrap.min.css  tooplate-gotto-job.css
app/templates/: base.html  confirm_delete.html
app/templates/includes/: breadcrumb.html  footer.html  main_menu.html  messages.html  paganations_info.html  paginations.html
app/templates/mainapp/: index.html
app/templates/tags/: user_date.html  user_date_time.html
app/tests/projects_app/: conftest.py  old_conftest.py  old_test_projects.py  test_project_app.py  test_projects.py
app/vacancy_app/: admin.py  filters.py  forms.py  mixins.py  models.py  permissions.py  urls.py  utils.py  views.py
app/vacancy_app/templatetags/: url_add_get_param.py  vacancy_app_tags.py
app/vacancyapp/: urls.py
dev_tools/: create_superuser.py  delete_migrations_files.sh  example_git_hook.sh  git_hook_pre_commit.sh  git_hook_pre_push.sh
dev_tools/fixtures/: auth_app.json  auth_app_user.yaml  authapp_user.yaml  cv_app_busy_type.json  cv_app_cv.json  cv_app_relocation_type.json  favorite_app.json  news.json  project_app_membership.json  project_app_membership.yaml  project_app_project.json  project_app_project.yaml  projectapp_membership.yaml  projectapp_project.yaml  role_app.json  role_app_role.yaml  roleapp_role.yaml  vacancy_app_applicant_level.json  vacancy_app_company.json  vacancy_app_employment_type.json  vacancy_app_job_type.json  vacancy_app_payment_account.json  vacancy_app_vacancy.json
envfiles/: env.sample  env_dev
(+117 files in other folders)
