[tool.poetry]
name = "command"
version = "0.1.0"
description = ""
authors = ["V-U-Simon <V-U-Simon@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
django = "^4.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
yapf = "^0.40.1"
isort = "^5.12.0"
autoflake = "^2.1.1"
djlint = "^1.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
line_length = 120
force_sort_within_sections = true
# this configuration is compatible with yapf
multi_line_output = 3
include_trailing_comma = true


[tool.yapf]
based_on_style = "google"
# google
# facebook
column_limit = 120
indent_width = 4


[tool.yapfignore]
ignore_patterns = [".venv/*"]
