[tool.poetry]
name = "DeveJoint"
version = "0.1.0"
description = "A platform for bringing together IT professionals, which will connect professionals who are looking for an opportunity to participate in a project to create IT products on a voluntary or commercial basis by posting on the portal"
authors = [
    "V-U-Simon <V-U-Simon@yandex.ru>",
    "bervr",
    "DashViolin",
    "Joattt",
    "LaseStar",
    "segonaz",
    "Sergiusz2try",
    "Zhdanov-Vyacheslav",
]
readme = "README.md"
repository = "https://github.com/Parus-Sail/Deve-Joint"

[tool.poetry.dependencies]
python = "3.10.10"
django = "^4.2.2"
psycopg2-binary = "^2.9.6"
django-debug-toolbar = "^4.1.0"
gunicorn = "^20.1.0"
crispy-bootstrap5 = "^0.7"
pillow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-django = "^4.5.2"
yapf = "^0.40.1"
isort = "^5.12.0"
autoflake = "^2.1.1"
djlint = "^1.31.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
line_length = 120
force_sort_within_sections = true
# this configuration is compatible with yapf
multi_line_output = 3
include_trailing_comma = true


[tool.yapf]
based_on_style = "google"
# google
# facebook
column_limit = 120
indent_width = 4


[tool.yapfignore]
ignore_patterns = [".venv/*"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
addopts = "-v --tb=short"

[tool.pytest]
testpaths = "tests"
python_files = ["test_*.py", "*_test.py"]

[tool.djlint]
exclude = ".venv,venv,.tox,.eggs"
profile = "django"
format_css = true
format_js = true
extension = "html"
extend_exclude = ".py"

[tool.autoflake]
verbose = 'true'
in-place = true
check = true
exclude = ['settings_test.py', 'settings.py']
remove-all-unused-imports = true
